--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <center>
     <br>
     <br>
-    <img src="C:\Users\FARID\Desktop\APP DEVELOPMENT\Web Development (with image, link and tables)\Images\A.jpg" alt="Angela Yu">
+    <img src="https://img-c.udemycdn.com/user/200_H/31334738_a13c_2.jpg" alt="Angela Yu">
     <p>INSTRUCTOR <br>
     <h1><strong>Dr. Angela Yu</strong></h1> <br> <strong>Developer and Lead Instructor</strong> <br>
     <a href="https://support.udemy.com/hc/en-us/articles/4407469383575">
@@ -58,7 +58,7 @@
   <table>
     <tr>
       <td>
-        <img src="C:\Users\FARID\Desktop\APP DEVELOPMENT\Web Development (with image, link and tables)\Images\python bootcamp.jpg" alt="python bootcamp">
+        <img src="https://img-c.udemycdn.com/course/240x135/2776760_f176_9.jpg">
         <p>
           <a href="https://www.udemy.com/course/100-days-of-code/"><b>100 Days of Code: The Complete Python Pro Bootcamp for 2022</b></a> <br>
           Dr. Angela Yu <br>
@@ -70,7 +70,7 @@
         </p>
       </td>
       <td>
-        <img src="C:\Users\FARID\Desktop\APP DEVELOPMENT\Web Development (with image, link and tables)\Images\Web Development bootcamp.jpg" alt="Web Development bootcamp">
+        <img src="https://img-c.udemycdn.com/course/240x135/1565838_e54e_15.jpg" alt="Web Development bootcamp">
         <p>
           <a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/"><b>The Complete 2022 Web Development Bootcamp</b></a> <br>
           Dr. Angela Yu <br>
@@ -86,7 +86,7 @@
   <table>
     <tr>
       <td>
-        <img src="C:\Users\FARID\Desktop\APP DEVELOPMENT\Web Development (with image, link and tables)\Images\IOS and Swift bootcamp.jpg" alt="IOS and Swift bootcamp">
+        <img src="https://img-c.udemycdn.com/course/240x135/1778502_f4b9_12.jpg" alt="IOS and Swift bootcamp">
         <p>
           <a href="https://www.udemy.com/course/ios-13-app-development-bootcamp/"><b>iOS & Swift - The Complete iOS App Development Bootcamp</b></a> <br>
           Dr. Angela Yu <br>
@@ -97,7 +97,7 @@
         </p>
       </td>
       <td>
-        <img src="C:\Users\FARID\Desktop\APP DEVELOPMENT\Web Development (with image, link and tables)\Images\Complete Flutter Development.jpg" alt="Complete Flutter Development">
+        <img src="https://img-c.udemycdn.com/course/240x135/2259120_305f_6.jpg">
         <p>
           <a href="https://www.udemy.com/course/flutter-bootcamp-with-dart/"><b>The Complete 2021 Flutter Development Bootcamp with Dart</b></a> <br>
           Dr. Angela Yu <br>
@@ -112,7 +112,7 @@
   <table>
     <tr>
       <td>
-        <img src="C:\Users\FARID\Desktop\APP DEVELOPMENT\Web Development (with image, link and tables)\Images\Data Science and Machine Learning.jpg" alt="Data Science and Machine Learning">
+        <img src="https://img-c.udemycdn.com/course/240x135/1318112_faa8_5.jpg" alt="Data Science and Machine Learning">
         <p>
           <a href="https://www.udemy.com/course/python-data-science-machine-learning-bootcamp/"><b>Complete 2022 Data Science & Machine Learning Bootcamp</b></a> <br>
           Phillip Muellauer, Dr. Angela Yu <br>
@@ -122,7 +122,7 @@
         </p>
       </td>
       <td>
-        <img src="C:\Users\FARID\Desktop\APP DEVELOPMENT\Web Development (with image, link and tables)\Images\Best Python.jpg" alt="Best Python">
+        <img src="https://img-c.udemycdn.com/course/240x135/4367336_0573_6.jpg" alt="Best Python">
         <p>
           <a href="https://www.udemy.com/course/best-100-days-python/"><b>(Best) Python: 100 Python</b></a> <br>
           Dr. Angela Yu <br>
@@ -138,7 +138,7 @@
   <table>
     <tr>
       <td>
-        <img src="C:\Users\FARID\Desktop\APP DEVELOPMENT\Web Development (with image, link and tables)\Images\Complete Crowdfunding Course.jpg" alt="Complete Crowdfunding Course">
+        <img src="https://img-c.udemycdn.com/course/240x135/1255050_8038.jpg" alt="Complete Crowdfunding Course">
         <p>
           <a href="https://www.udemy.com/course/the-complete-crowdfunding-course-for-kickstarter-indiegogo/"><b>The Complete Crowdfunding Course for Kickstarter & Indiegogo</b></a> <br>
           Dr. Angela Yu <br>
@@ -149,7 +149,7 @@
         </p>
       </td>
       <td>
-        <img src="C:\Users\FARID\Desktop\APP DEVELOPMENT\Web Development (with image, link and tables)\Images\The Complete iOS App Development Bootcamp.jpg" alt="The Complete iOS App Development Bootcamp"> <br>
+        <img src="https://img-c.udemycdn.com/course/240x135/1289478_5831_10.jpg" alt="The Complete iOS App Development Bootcamp"> <br>
         <p>
           <a href="https://www.udemy.com/course/ios11-app-development-bootcamp/"><b>iOS 11 & Swift 4 - The Complete iOS App Development Bootcamp</b></a> <br>
           Dr. Angela Yu <br>
@@ -161,7 +161,7 @@
     </tr>
   </table>
 
-  <img src="C:\Users\FARID\Desktop\APP DEVELOPMENT\Web Development (with image, link and tables)\Images\The Complete iOS App Development.jpg" alt="The Complete iOS App Development">
+  <img src="https://img-c.udemycdn.com/course/240x135/2551847_4832_9.jpg" alt="The Complete iOS App Development">
   <p>
     <a href="https://www.udemy.com/course/ios-12-app-development-bootcamp/"><b>iOS 12 Swift 4.2 - The Complete iOS</a> <br>
     App Development Bootcamp</b> <br>
